--- a/meta/Cargo.toml
+++ b/meta/Cargo.toml
@@ -10,5 +10,5 @@ authors = [ "you",]
 [dependencies.coindrip]
 path = ".."
 
-[dependencies.elrond-wasm-debug]
-version = "0.38.0"
+[dependencies.multiversx-sc-meta]
+version = "0.39.2"
