--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "coindrip"
-version = "1.0.0-beta"
-authors = [ "Razvan Statescu",]
+version = "0.1.2-alpha"
+authors = [ "you",]
 edition = "2018"
 publish = false
 
