--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,13 @@ edition = "2018"
 publish = false
 
 [lib]
-path = "src/coindrip-protocol.rs"
+path = "src/lib.rs"
 
 [dev-dependencies]
 num-bigint = "0.4.2"
 
 [dependencies.multiversx-sc]
-version = "0.39.2"
+version = "0.41.2"
 
 [dev-dependencies.multiversx-sc-scenario]
-version = "0.39.2"
+version = "0.41.2"
